# TutorAssistent

./: .env.example  .gitignore  .prettierignore  README.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
api/: main.py
bot/: main.py  states.py  texts.py
bot/handlers/: start.py
bot/keyboards/: start.py
bot/middlewares/: auth.py
core/: config.py
core/db/: engine.py  models.py  seed.py
core/db/tags/: tags_math_ege.json
core/schemas/: llm.py
core/services/: llm.py  storage.py
migrations/: env.py
migrations/versions/: 20260528_0001_init.py
parser/: downloader.py  fipi_parser.py  latex_ocr.py  pipeline.py  sources.py  tagger.py
prisma/: schema.prisma  seed.ts  tags_math_ege.json
prisma/migrations/20260527211423_init/: migration.sql
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/api/webhooks/clerk/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/homeworks/: page.tsx
src/app/dashboard/payments/: page.tsx
src/app/dashboard/schedule/: page.tsx
src/app/dashboard/settings/: page.tsx
src/app/dashboard/students/: page.tsx
src/app/sign-in/[[...sign-in]]/: page.tsx
src/app/sign-up/[[...sign-up]]/: page.tsx
src/components/: mobile-sidebar.tsx  sidebar.tsx  theme-toggle.tsx
tests/: test_parser.py
