[project]
name = "tutor-ai"
version = "0.1.0"
description = "AI-ассистент репетиторов: Telegram-бот + Mini App для сборки ДЗ"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "aiogram>=3.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "yandex-cloud-ml-sdk>=0.3",
    "yookassa>=3.5",
    "boto3>=1.35",
    "jinja2>=3.1",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "black>=24.10",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "bot", "api", "parser"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
